--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "body-parser": "^1.19.2",
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "fs": "^0.0.1-security",
+    "http": "0.0.1-security"
   },
   "devDependencies": {
     "chai": "^4.3.6",
